@@ -1,0 +1,16 @@
+# List of extra members permitted in the .deb files
+#
+# Format is:
+#   <name> => <position>
+#
+#
+# <position> is a 0-indexed position of where the extra member is
+# expected.  It can be "ANYWHERE" if the order is not relevant.  Note
+# despite of the value of <position>, any member appearing before the
+# data.tar member MUST have a name starting with "_".  If not Lintian
+# will presume it is the control.tar or the data.tar member (depending
+# on how early it occurs).  It is impossible for any valid "2.0" deb
+# file to have an extra member at position 0 (which is exclusively
+# reserved for the "debian-binary" member)
+#
+# For Debian, no extra members are defined, so the file is empty atm.
